--- a/ComputerGraphics_Project.ipynb
+++ b/ComputerGraphics_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM73Im2FKT+BnhXgY9NTO3",
+      "authorship_tag": "ABX9TyMUf+DjT80cFHdksYPa+FMe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,17 +30,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7Emqbivl0MnB"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "# @title Setup Everything\n",
+        "# @title Code used for Computer Graphics Project \n",
+        "# Setup Everything\n",
         "\n",
         "!nvidia-smi\n",
         "!git clone https://github.com/juan026/EVA3D.git\n",
