--- a/ComputerGraphics_Project.ipynb
+++ b/ComputerGraphics_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVHiKyvNmPh/7gpgrI8ydf",
+      "authorship_tag": "ABX9TyM48IukOs07RC4lg7eNcxaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,10 @@
         "\n",
         "*Hong, F., Chen, Z., Lan, Y., Pan, L., & Liu, Z. (2022). Eva3d: Compositional 3d human generation from 2d image collections. arXiv preprint arXiv:2210.04888.*\n",
         "\n",
+        "Juan Antonio Del Hoyo Ontiveros\n",
         "\n",
-        "\n",
-        "Este trabajo propone un modelo de tipo red generativa antagónica GAN el cual se entreno a partir de imágenes 2D para crear lo que se conoce como inversión de gráficos, es decir, pasar de representación 2D a 3D. En el método propuesto los autores aplican una división del cuerpo humano en partes locales,  de esta forma pueden enfocar el aprendizaje en las distintas áreas donde se identifican las articulaciones del cuerpo humano. Finalmente, se logra representar las partes articuladas de manera más precisa.\n",
+        "En este se realiza un revisión y adaptación del código con el fin de evaluarlo.\n",
+        "Este articulo propone un modelo de tipo red generativa antagónica GAN el cual se entrenó a partir de imágenes 2D para crear lo que se conoce como inversión de gráficos, es decir, pasar de representación 2D a 3D. En el método propuesto los autores aplican una división del cuerpo humano en partes locales,  de esta forma pueden enfocar el aprendizaje en las distintas áreas donde se identifican las articulaciones del cuerpo humano. Finalmente, se logra representar las partes articuladas de manera más precisa.\n",
         "\n",
         "\n",
         "Este demo utiliza el modelo pre-entrenado en la base de datos DeepFashion.\n",
@@ -58,10 +59,20 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gj9jUt7nZMBY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# @title Code used for Computer Graphics Project \n",
         "# Setup Everything\n",
         "\n",
+        "# Importamos la copia del repositorio e instalamos todas las librerias requeridas por el proyecto\n",
         "!nvidia-smi\n",
         "!git clone https://github.com/juan026/EVA3D.git\n",
         "\n",
@@ -101,6 +112,8 @@
       "cell_type": "code",
       "source": [
         "# @title Download Models\n",
+        "\n",
+        "# Se descargan los modelos preentrenados \n",
         "%cd EVA3D\n",
         "from download_models import download_pretrained_models\n",
         "download_pretrained_models()"
@@ -140,7 +153,7 @@
       "source": [
         "# @title Download SMPL NEUTRAL model\n",
         "!ls\n",
-        "\n",
+        "# Descagamos el modelo para la generación de cuerpos humanos en 3D\n",
         "!mkdir smpl_models\n",
         "%cd smpl_models\n",
         "!mkdir smpl\n",
@@ -161,6 +174,7 @@
         "# @title Download dataset for training\n",
         "%cd ../..\n",
         "!ls\n",
+        "# Se descarga el conjunto de datos Deep Fashion\n",
         "!python download_datasets.py"
       ],
       "metadata": {
@@ -174,6 +188,7 @@
       "source": [
         "\n",
         "# @title Start the Genenration!\n",
+        "# Ejecutamos la inferencia por defecto\n",
         "!python generation_demo.py --batch 1 --chunk 1 --expname 512x256_deepfashion --dataset_path demodataset --depth 5 --width 128 --style_dim 128 --renderer_spatial_output_dim 512 256 --input_ch_views 3 --white_bg --voxhuman_name eva3d_deepfashion --deltasdf --N_samples 28 --ckpt 420000 --identities 1 --truncation_ratio 0.5\n",
         "from IPython.display import Image\n",
         "Image('evaluations/512x256_deepfashion/iter_0420000/random_angles/images_paper_fig/0000000.png')"
@@ -190,6 +205,8 @@
         "# @title Define images for evaluation\n",
         "import os\n",
         "# define images for evaluation\n",
+        "# Se definen las rutas con las imagenes de ejemplos \n",
+        "# seleccionados para evaluar el modelo\n",
         "root_dataset = \"/content/EVA3D/datasets/DeepFashion/images/\"\n",
         "\n",
         "testing_images= [\"MEN-Jackets_Vests-id_00005346-01_4_full.png\",\n",
@@ -212,7 +229,8 @@
       "source": [
         "# @title Define code for transformation\n",
         "\n",
-        "\n",
+        "# Se importan las librerias de OpenCV para aplicar operaciones de \n",
+        "# transformaciones a las imágenes.\n",
         "# Run transformations\n",
         "import cv2\n",
         "import numpy as np\n",
@@ -233,6 +251,8 @@
       "source": [
         "# @title Transformation: Translation\n",
         "# Translation\n",
+        "# Se aplica la transformación de traslación en los ejes X,Y con 200 y 150 \n",
+        "# pixeles respectivamente.\n",
         "image = cv2.imread(img_testing1)\n",
         "ancho = image.shape[1] #columnas\n",
         "alto = image.shape[0] # filas\n",
@@ -245,6 +265,8 @@
         "print('Output Image')\n",
         "cv2_imshow(imageOut)\n",
         "cv2.waitKey(0)\n",
+        "# Se guarda la imagen para su posterior inferencia\n",
+        "# en el modelo.\n",
         "output_img_path = img_testing1[:-4]+\"__translation.png\"\n",
         "print(output_img_path)\n",
         "cv2.imwrite(output_img_path, imageOut)\n",
@@ -264,6 +286,7 @@
       "cell_type": "code",
       "source": [
         "# @title Run inference: Translation\n",
+        "# Ejecutamos la inferencia en la imagen anterior\n",
         "!python generation_demo.py --batch 1 --chunk 1 --expname 512x256_deepfashion --dataset_path /content/EVA3D/datasets/DeepFashion --depth 5 --width 128 --style_dim 128 --renderer_spatial_output_dim 512 256 --input_ch_views 3 --white_bg --voxhuman_name eva3d_deepfashion --deltasdf --N_samples 28 --ckpt 420000 --identities 1 --truncation_ratio 0.5 --testing_list /content/EVA3D/file_test1.txt\n",
         "from IPython.display import Image\n",
         "Image('evaluations/512x256_deepfashion/iter_0420000/random_angles/images_paper_fig/0000000.png')"
@@ -279,7 +302,10 @@
       "source": [
         "# @title Transformation: Rotation\n",
         "# Rotation\n",
-        "\n",
+        "# Se aplica la transformación de rotación usando como eje de rotación \n",
+        "# el centro dividiendo por 2 su tamaño, después se rota 30 grados sobre el eje\n",
+        "# y no se aplica ningún escalamiento.\n",
+        "# pixeles respectivamente.\n",
         "image = cv2.imread(img_testing2)\n",
         "ancho = image.shape[1] #columnas\n",
         "alto = image.shape[0] # filas\n",
@@ -290,7 +316,8 @@
         "cv2_imshow(image)\n",
         "print('Output Image')\n",
         "cv2_imshow(imageOut)\n",
-        "\n",
+        "# Se guarda la imagen para su posterior inferencia\n",
+        "# en el modelo.\n",
         "output_img_path = img_testing2[:-4]+\"__rotation.png\"\n",
         "print(output_img_path)\n",
         "cv2.imwrite(output_img_path, imageOut)\n",
@@ -327,6 +354,9 @@
         "# @title Transformation: Scale\n",
         "image = cv2.imread(img_testing3)\n",
         "# Scale\n",
+        "# Se aplica la transformación de escalamiento en tamaño\n",
+        "# de 650x650 pixeles.\n",
+        "# y no se aplica ningún escalamiento.\n",
         "imageOut = cv2.resize(image,(650,650), interpolation=cv2.INTER_CUBIC)\n",
         "print('Input Image')\n",
         "cv2_imshow(image)\n",
@@ -337,7 +367,8 @@
         "cv2.imwrite(output_img_path, imageOut)\n",
         "cv2.waitKey(0)\n",
         "cv2.destroyAllWindows()\n",
-        "\n",
+        "# Se guarda la imagen para su posterior inferencia\n",
+        "# en el modelo.\n",
         "# save basename image to file for inference\n",
         "with open(\"file_test1.txt\", \"w\") as ft1:\n",
         "  ft1.write(os.path.basename(output_img_path))"
@@ -358,6 +389,33 @@
       ],
       "metadata": {
         "id": "EUMnipDVXKzZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Conclusiones\n",
+        "\n",
+        "Se evalúa aplicando inferencias en el modelo propuesto por los autores del artículo.\n",
+        "\n",
+        "Se realizaron las siguientes transformaciones: Rotación, escalamiento y traslación en las imágenes.\n",
+        "\n",
+        "Las salidas demuestran que el modelo es capaz de recrear las representaciones 3D\n",
+        "a partir de las observaciones 2D.\n",
+        "\n",
+        "Se requiere realizar más experimentación en las evaluaciones, cambio de parámetros con el fin de mejorar los resultados obtenidos.\n"
+      ],
+      "metadata": {
+        "id": "iKNr45GKXoS7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wIUYM9KlZEha"
       },
       "execution_count": null,
       "outputs": []
